name:                default-args
version:             0.1.0.0
synopsis:            Apply default arguments to function/constructor
homepage:            https://github.com/mvoidex/default-args
license:             BSD3
license-file:        LICENSE
author:              Alexandr `voidex` Ruchkin
maintainer:          voidex@live.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Default.Args
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs
  default-extensions: UnicodeSyntax
  build-depends:
    base >= 4.9 && < 4.10,
    data-default
